--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name        = "web-chronicle"
+name        = "webchronicle"
 version     = "0.1.0"
 description = ""
 authors     = ["dtx1007 <148854108+dtx1007@users.noreply.github.com>"]
@@ -7,6 +7,27 @@ readme      = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+
+
+[tool.poetry.group.dev.dependencies]
+ruff       = "^0.6.8"
+pre-commit = "^3.8.0"
+mypy       = "^1.11.2"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.3"
+
+
+[tool.mypy]
+python_version        = "3.12"
+warn_unused_configs   = true
+warn_no_return        = true
+disallow_untyped_defs = true
+warn_unused_ignores   = true
+warn_redundant_casts  = true
+warn_unreachable      = true
+show_error_context    = true
 
 
 [build-system]
