--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme      = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+flask = "^3.0.3"
+sqlalchemy = "^2.0.36"
 
 
 [tool.poetry.group.dev.dependencies]
