Añadido popup de ejemplo y actualización en tiempo real de la blaklist, faltaría enviar correctamente mensajes de actualización al servidor

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,11 +2,22 @@
     "manifest_version": 3,
     "name": "WebChronicle's Input Logger",
     "version": "1.0",
-    "permissions": ["scripting", "activeTab", "storage"],
+    "permissions": [
+        "scripting",
+        "activeTab",
+        "storage",
+        "tabs"
+    ],
     "minimum_chrome_version": "102",
     "background": {
         "service_worker": "background.js",
         "type": "module"
     },
-    "host_permissions": ["http://*/*", "https://*/*"]
+    "host_permissions": [
+        "http://*/*",
+        "https://*/*"
+    ],
+    "action": {
+        "default_popup": "popup.html"
+    }
 }
