--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python     = "^3.12"
 flask      = "^3.0.3"
 sqlalchemy = "^2.0.36"
 flask-sock = "^0.7.0"
+python-dateutil = "^2.9.0.post0"
+flask-sqlalchemy = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
